fixing overflow

--- a/main.css
+++ b/main.css
@@ -496,7 +496,7 @@
   }
 }
 .footer__companyDescription {
-  width: 436px;
+  width: 100vw;
 }
 @media screen and (min-width: 750px) {
   .footer__companyDescription {
